--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?...">
+</script>
 <article class="page">
 
   <h1>{{ page.title }}</h1>
@@ -9,4 +11,5 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
+
 </article>
